[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/Butterfly_fish_affirmation_100_pixels.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/player.gd" type="Script" id=2]
[ext_resource path="res://sfx/eat_good.ogg" type="AudioStream" id=3]
[ext_resource path="res://sfx/eat_bad.ogg" type="AudioStream" id=4]
[ext_resource path="res://fonts/LilitaOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sfx/grow.ogg" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 14.0
max_value = 1000.0
step = 1.0
percent_visible = false

[node name="Label" type="Label" parent="CanvasLayer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Health"
align = 1
valign = 1

[node name="EatGood" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="EatBad" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true

[node name="Grow" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="finished" from="EatBad" to="." method="_on_EatBad_finished"]
